# libstrophe

./: CMakeLists.txt
examples/: CMakeLists.txt
src/: resolver.c  sock.c
